// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Select Cards Layout Snapshots CameraSelectCard Layout deve manter o layout compacto do camera card com streaming: camera-card-com-streaming 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm absolute left-2 top-2 w-[400px] tracking-tighter"
>
  <div
    class="relative"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground absolute right-1 top-1 h-5 w-5 p-0"
    >
      <svg
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="flex flex-col space-y-1.5 p-6 border-b px-4 py-3"
    >
      <h3
        class="text-left text-sm font-semibold tracking-tighter"
      >
        Câmera
      </h3>
    </div>
    <div
      class="p-6 px-4 py-3"
    >
      <div
        class="space-y-3 text-sm"
      >
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Código
          </span>
          <span
            class="text-sm text-muted-foreground"
          >
            CAM001
          </span>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-map-pin size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Localização
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          >
            Copacabana Palace
          </span>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Zona
          </span>
          <span
            class="text-sm text-muted-foreground"
          >
            Zona Sul
          </span>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Latitude
            </span>
            <span
              class="text-sm text-muted-foreground"
            >
              -22.906800
            </span>
          </div>
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Longitude
            </span>
            <span
              class="text-sm text-muted-foreground"
            >
              -43.172900
            </span>
          </div>
        </div>
        <div
          class="flex gap-2 pt-2"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 flex-1"
          >
            <svg
              class="lucide lucide-map-pin mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            Focar na Câmera
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
            title="Voltar ao zoom anterior"
          >
            <svg
              class="lucide lucide-rotate-ccw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
            </svg>
          </button>
        </div>
        <div
          class="pt-2"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 w-full"
          >
            Abrir Streaming
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Cards Layout Snapshots CameraSelectCard Layout deve manter o layout compacto do camera card sem streaming: camera-card-sem-streaming 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm absolute left-2 top-2 w-[400px] tracking-tighter"
>
  <div
    class="relative"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground absolute right-1 top-1 h-5 w-5 p-0"
    >
      <svg
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="flex flex-col space-y-1.5 p-6 border-b px-4 py-3"
    >
      <h3
        class="text-left text-sm font-semibold tracking-tighter"
      >
        Câmera
      </h3>
    </div>
    <div
      class="p-6 px-4 py-3"
    >
      <div
        class="space-y-3 text-sm"
      >
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Código
          </span>
          <span
            class="text-sm text-muted-foreground"
          >
            CAM001
          </span>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-map-pin size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Localização
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          >
            Copacabana Palace
          </span>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Zona
          </span>
          <span
            class="text-sm text-muted-foreground"
          >
            Zona Sul
          </span>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Latitude
            </span>
            <span
              class="text-sm text-muted-foreground"
            >
              -22.906800
            </span>
          </div>
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Longitude
            </span>
            <span
              class="text-sm text-muted-foreground"
            >
              -43.172900
            </span>
          </div>
        </div>
        <div
          class="flex gap-2 pt-2"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 flex-1"
          >
            <svg
              class="lucide lucide-map-pin mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            Focar na Câmera
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
            title="Voltar ao zoom anterior"
          >
            <svg
              class="lucide lucide-rotate-ccw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Cards Layout Snapshots CameraSelectCard Layout deve manter o layout quando não há objeto selecionado: camera-card-null 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm absolute left-2 top-2 w-[400px] tracking-tighter hidden"
>
  <div
    class="relative"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground absolute right-1 top-1 h-5 w-5 p-0"
    >
      <svg
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="flex flex-col space-y-1.5 p-6 border-b px-4 py-3"
    >
      <h3
        class="text-left text-sm font-semibold tracking-tighter"
      >
        Câmera
      </h3>
    </div>
    <div
      class="p-6 px-4 py-3"
    >
      <div
        class="space-y-3 text-sm"
      >
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Código
          </span>
          <span
            class="text-sm text-muted-foreground"
          />
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-map-pin size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Localização
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          />
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Zona
          </span>
          <span
            class="text-sm text-muted-foreground"
          />
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Latitude
            </span>
            <span
              class="text-sm text-muted-foreground"
            />
          </div>
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Longitude
            </span>
            <span
              class="text-sm text-muted-foreground"
            />
          </div>
        </div>
        <div
          class="flex gap-2 pt-2"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 flex-1"
          >
            <svg
              class="lucide lucide-map-pin mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            Focar na Câmera
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
            title="Voltar ao zoom anterior"
          >
            <svg
              class="lucide lucide-rotate-ccw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Cards Layout Snapshots RadarSelectCard Layout deve manter o layout compacto do radar card com radar ativo: radar-card-ativo 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm absolute left-2 top-2 w-[400px] tracking-tighter"
>
  <div
    class="relative"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground absolute right-1 top-1 h-5 w-5 p-0"
    >
      <svg
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="flex flex-col space-y-1.5 p-6 border-b px-4 py-3"
    >
      <h3
        class="text-left text-sm font-semibold tracking-tighter"
      >
        Radar OCR
      </h3>
    </div>
    <div
      class="p-6 px-4 py-3"
    >
      <div
        class="space-y-3 text-sm"
      >
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Código CET-Rio
          </span>
          <span
            class="break-all text-sm text-muted-foreground"
          >
            123456
          </span>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-map-pin size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Localização
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          >
            Avenida Atlântica - Copacabana
          </span>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Latitude
            </span>
            <span
              class="break-all text-sm text-muted-foreground"
            >
              -22.9068
            </span>
          </div>
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Longitude
            </span>
            <span
              class="break-all text-sm text-muted-foreground"
            >
              -43.1729
            </span>
          </div>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-building size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="20"
                rx="2"
                ry="2"
                width="16"
                x="4"
                y="2"
              />
              <path
                d="M9 22v-4h6v4"
              />
              <path
                d="M8 6h.01"
              />
              <path
                d="M16 6h.01"
              />
              <path
                d="M12 6h.01"
              />
              <path
                d="M12 10h.01"
              />
              <path
                d="M12 14h.01"
              />
              <path
                d="M16 10h.01"
              />
              <path
                d="M16 14h.01"
              />
              <path
                d="M8 10h.01"
              />
              <path
                d="M8 14h.01"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Empresa
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          >
            TECHNO RADARES
          </span>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-history size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
              <path
                d="M12 7v5l4 2"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Última detecção
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          >
            15/01/2025 às 10:30:00
          </span>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Ativo nas últimas 24 horas
          </span>
          <span
            class="text-sm text-emerald-600"
          >
            Sim
          </span>
        </div>
        <div
          class="flex gap-2 pt-2"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 flex-1"
          >
            <svg
              class="lucide lucide-map-pin mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            Focar no Radar
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
            title="Voltar ao zoom anterior"
          >
            <svg
              class="lucide lucide-rotate-ccw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Cards Layout Snapshots RadarSelectCard Layout deve manter o layout compacto do radar card com radar inativo: radar-card-inativo 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm absolute left-2 top-2 w-[400px] tracking-tighter"
>
  <div
    class="relative"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground absolute right-1 top-1 h-5 w-5 p-0"
    >
      <svg
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="flex flex-col space-y-1.5 p-6 border-b px-4 py-3"
    >
      <h3
        class="text-left text-sm font-semibold tracking-tighter"
      >
        Radar OCR
      </h3>
    </div>
    <div
      class="p-6 px-4 py-3"
    >
      <div
        class="space-y-3 text-sm"
      >
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Código CET-Rio
          </span>
          <span
            class="break-all text-sm text-muted-foreground"
          >
            123456
          </span>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-map-pin size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Localização
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          >
            Avenida Atlântica - Copacabana
          </span>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Latitude
            </span>
            <span
              class="break-all text-sm text-muted-foreground"
            >
              -22.9068
            </span>
          </div>
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Longitude
            </span>
            <span
              class="break-all text-sm text-muted-foreground"
            >
              -43.1729
            </span>
          </div>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-building size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="20"
                rx="2"
                ry="2"
                width="16"
                x="4"
                y="2"
              />
              <path
                d="M9 22v-4h6v4"
              />
              <path
                d="M8 6h.01"
              />
              <path
                d="M16 6h.01"
              />
              <path
                d="M12 6h.01"
              />
              <path
                d="M12 10h.01"
              />
              <path
                d="M12 14h.01"
              />
              <path
                d="M16 10h.01"
              />
              <path
                d="M16 14h.01"
              />
              <path
                d="M8 10h.01"
              />
              <path
                d="M8 14h.01"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Empresa
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          >
            TECHNO RADARES
          </span>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-history size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
              <path
                d="M12 7v5l4 2"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Última detecção
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          >
            01/12/2024 às 10:30:00
          </span>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Ativo nas últimas 24 horas
          </span>
          <span
            class="text-sm text-rose-600"
          >
            Não
          </span>
        </div>
        <div
          class="border-l-4 border-yellow-600 bg-secondary p-1.5"
        >
          <div
            class="flex items-start"
          >
            <svg
              class="lucide lucide-triangle-alert mr-1.5 mt-0.5 h-4 w-4 text-yellow-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
            <p
              class="text-xs text-gray-300"
            >
              <span
                class="font-bold text-yellow-400"
              >
                Atenção!
              </span>
               
              Radares são considerados inativos se não enviarem dados há mais de 24 horas. No entanto, essa informação não é atualizada em tempo real e pode seguir desatualizada por várias horas.
            </p>
          </div>
        </div>
        <div
          class="flex gap-2 pt-2"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 flex-1"
          >
            <svg
              class="lucide lucide-map-pin mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            Focar no Radar
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
            title="Voltar ao zoom anterior"
          >
            <svg
              class="lucide lucide-rotate-ccw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Cards Layout Snapshots RadarSelectCard Layout deve manter o layout quando não há objeto selecionado: radar-card-null 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm absolute left-2 top-2 w-[400px] tracking-tighter hidden"
>
  <div
    class="relative"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground absolute right-1 top-1 h-5 w-5 p-0"
    >
      <svg
        class="lucide lucide-x h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      class="flex flex-col space-y-1.5 p-6 border-b px-4 py-3"
    >
      <h3
        class="text-left text-sm font-semibold tracking-tighter"
      >
        Radar OCR
      </h3>
    </div>
    <div
      class="p-6 px-4 py-3"
    >
      <div
        class="space-y-3 text-sm"
      >
        <div
          class="flex flex-col space-y-1"
        >
          <span
            class="text-sm font-medium"
          >
            Código CET-Rio
          </span>
          <span
            class="break-all text-sm text-muted-foreground"
          />
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-map-pin size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Localização
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          >
            undefined - undefined
          </span>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Latitude
            </span>
            <span
              class="break-all text-sm text-muted-foreground"
            />
          </div>
          <div
            class="flex flex-col space-y-1"
          >
            <span
              class="text-sm font-medium"
            >
              Longitude
            </span>
            <span
              class="break-all text-sm text-muted-foreground"
            />
          </div>
        </div>
        <div
          class="flex flex-col space-y-1"
        >
          <div
            class="flex items-center gap-1"
          >
            <svg
              class="lucide lucide-building size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="20"
                rx="2"
                ry="2"
                width="16"
                x="4"
                y="2"
              />
              <path
                d="M9 22v-4h6v4"
              />
              <path
                d="M8 6h.01"
              />
              <path
                d="M16 6h.01"
              />
              <path
                d="M12 6h.01"
              />
              <path
                d="M12 10h.01"
              />
              <path
                d="M12 14h.01"
              />
              <path
                d="M16 10h.01"
              />
              <path
                d="M16 14h.01"
              />
              <path
                d="M8 10h.01"
              />
              <path
                d="M8 14h.01"
              />
            </svg>
            <span
              class="text-sm font-medium"
            >
              Empresa
            </span>
          </div>
          <span
            class="text-sm text-muted-foreground"
          />
        </div>
        <div
          class="border-l-4 border-yellow-600 bg-secondary p-1.5"
        >
          <div
            class="flex items-start"
          >
            <svg
              class="lucide lucide-triangle-alert mr-1.5 mt-0.5 h-4 w-4 text-yellow-400"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
            <p
              class="text-xs text-gray-300"
            >
              <span
                class="font-bold text-yellow-400"
              >
                Atenção!
              </span>
               
              Radares são considerados inativos se não enviarem dados há mais de 24 horas. No entanto, essa informação não é atualizada em tempo real e pode seguir desatualizada por várias horas.
            </p>
          </div>
        </div>
        <div
          class="flex gap-2 pt-2"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 flex-1"
          >
            <svg
              class="lucide lucide-map-pin mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            Focar no Radar
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
            title="Voltar ao zoom anterior"
          >
            <svg
              class="lucide lucide-rotate-ccw h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
              />
              <path
                d="M3 3v5h5"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
